--- a/css/common.css
+++ b/css/common.css
@@ -577,7 +577,7 @@ header {
 /* -------------- */
 
 .footer .footer-section {
-  background: url("/asset/footer.png") no-repeat center center/cover;
+  background: url("/images/footer_item.png") no-repeat center center/cover;
   position: relative;
   overflow: hidden;
   min-height: 100vh;
@@ -591,7 +591,7 @@ header {
   left: 0;
   right: 0;
   bottom: 0;
-  background: url("/asset/footer.png") no-repeat center center/cover;
+  background: url("asset/footer.png") no-repeat center center/cover;
   /* background: 
                 radial-gradient(ellipse at 20% 80%, rgba(6, 182, 212, 0.3) 0%, transparent 50%),
                 radial-gradient(ellipse at 80% 20%, rgba(34, 197, 94, 0.2) 0%, transparent 50%),
@@ -604,7 +604,7 @@ header {
   left: 0;
   right: 0;
   bottom: 0;
-  background: url("/asset/footer.png") no-repeat center center/cover;
+  background: url("asset/footer.png") no-repeat center center/cover;
   /* background: 
                 radial-gradient(ellipse 150% 100% at 50% 120%, transparent 40%, rgba(6, 95, 70, 0.1) 41%, rgba(6, 95, 70, 0.1) 58%, transparent 60%),
                 radial-gradient(ellipse 150% 100% at 80% 90%, transparent 40%, rgba(20, 184, 166, 0.15) 41%, rgba(20, 184, 166, 0.15) 58%, transparent 60%),
@@ -662,6 +662,7 @@ header {
   font-size: 1.4rem;
   width: 100%;
   text-align: center;
+  letter-spacing: 0.3rem;
   color: #fff;
   opacity: 0.85;
 }
