--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,11 @@
   padding: 2rem 1rem;
 }
 
+.kt{
+  display:inline;
+  color:var(--secondry-index-color);
+}
+
 .smart-title {
   font-family: "Varela Round", sans-serif;
   font-weight: 400;
@@ -115,10 +120,35 @@
 .blur-wrapper {
   min-height: 105vh;
   font-family: "Segoe UI", sans-serif;
-  background-image: url("/asset/footer.png");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  /* background-image: url("/images/footer_item.png"); */
+  /* background-size: cover; */
+  /* background-position: center; */
+  /* background-repeat: no-repeat; */
+  background: transparent;
+  position: relative;
+ 
+  width:100%
+}
+
+.blur-wrapper .blur-section {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(217, 217, 217, 0.10);
+  backdrop-filter: blur(7.5px);
+  z-index: -1;
+}
+
+.blur-wrapper .blur-img {
+  position: absolute;
+  top: 130px;
+  left: 130px;
+  right: 130px;
+  bottom: 130px;
+  background: url("/images/blur_un.jpg") no-repeat center center/cover;
+  z-index: -2;
 }
 
 .blur-wrapper .hero-section {
@@ -162,7 +192,35 @@
   color: white;
   font-size: 2rem;
 }
+@media (max-width: 1200px) {
+  .blur-wrapper .blur-img {
+  position: absolute;
+  top: 100px;
+  left: 100px;
+  right: 100px;
+  bottom: 100px;
+}
+}
 
+@media (max-width: 900px) {
+  .blur-wrapper .blur-img {
+  position: absolute;
+  top: 70px;
+  left: 70px;
+  right: 70px;
+  bottom: 70px;
+}
+}
+
+@media (max-width: 750px) {
+  .blur-wrapper .blur-img {
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  right: 30px;
+  bottom: 30px;
+}
+}
 @media (max-width: 600px) {
   .small-hide {
     display: none;
@@ -178,6 +236,16 @@
     width: 60px;
     height: 60px;
   }
+
+  .blur-wrapper .blur-img {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  right: 10px;
+  bottom: 10px;
+  background: url("/images/blur_un.jpg") no-repeat center center/cover;
+  z-index: -2;
+}
 }
 
 /* ------------------------------------------------- */
