--- a/css/blog.css
+++ b/css/blog.css
@@ -134,7 +134,7 @@
   width: 100%;
   max-width: 1200px;
   border-radius: 2rem;
-  min-height:content;
+  min-height: content;
   padding: 6rem 4rem;
   background: url("/images/contactbg.png");
   background-repeat: no-repeat;
@@ -169,14 +169,14 @@
 
 .contact-section .contact-btn {
   z-index: 1;
- 
+
   margin-top: 2rem;
   background-color: var(--primary-index-color);
-  border:1px solid var(--primary-index-color);
+  border: 1px solid var(--primary-index-color);
   padding: 0.6rem 2rem;
   border: none;
   border-radius: 2rem;
-  color: #FFF;
+  color: #fff;
   text-align: center;
   font-family: "Varela Round", sans-serif;
   font-size: 25px;
@@ -187,8 +187,8 @@
 
 .contact-section .contact-btn:hover {
   background-color: #fff;
-  color:var(--primary-index-color);
-  border:1px solid var(--primary-index-color);
+  color: var(--primary-index-color);
+  border: 1px solid var(--primary-index-color);
 }
 
 @media (max-width: 768px) {
@@ -200,24 +200,213 @@
   }
 
   .contact-section .contact-card h2 {
-  text-align: center;
-  font-family: "Quicksand", sans-serif;
-  font-size: 30px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 35px;
-  z-index: 1;
-}
+    text-align: center;
+    font-family: "Quicksand", sans-serif;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 35px;
+    z-index: 1;
+  }
 }
 
-@media (max-width: 768px){
-   .contact-section .contact-card h2 {
+@media (max-width: 768px) {
+  .contact-section .contact-card h2 {
+    text-align: center;
+    font-family: "Quicksand", sans-serif;
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 31px;
+    z-index: 1;
+  }
+}
+
+/* ------------------------------------------------- */
+/* blog section */
+/* ------------------------------------------------- */
+
+.blog-section {
+  padding: 4rem 2rem;
+  padding-bottom: 12rem;
   text-align: center;
+  min-height: 100vh;
+  background: #EBF4FF;
+}
+
+.blog-section h2 {
+  color: var(--secondry-index-color);
+  font-family: "Varela Round", sans-serif;
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 1rem;
+}
+
+.blog-section .subtitle {
+  text-align: center;
+  font-family: "Quicksand", sans-serif;
+  font-size: 33px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 48px;
+  color: var(--primary-index-color);
+  max-width: 700px;
+  margin: 0 auto 3rem;
+  /* line-height: 1.6; */
+}
+
+.blog-section .cards-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 3.2rem;
+}
+
+.blog-section .card {
+  background-color: white;
+  border-radius: 2rem;
+  padding: 1.5rem;
+  width: 330px;
+  /* box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); */
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  position: relative;
+  border-bottom-right-radius: 72px;
+  border:none
+}
+
+.blog-section .icon-box {
+   position:absolute;
+   bottom:0px;
+   right:0px;
+   width:95px;
+   height:95px;
+   background-color: #EBF4FF;
+   border-top-left-radius: 50px;
+   border-bottom-right-radius: 72px;
+   border:none;
+}
+
+.blog-section .card .icon-box::before{
+ content:"";
+ position: absolute;
+ width:20px;
+ height:20px;
+ background-color: #fff;
+ border-bottom-right-radius: 30px;
+ top:-20px;
+ right:0;
+ box-shadow: 5px 5px 5px 0px #EBF4FF;
+ 
+}
+
+.blog-section .card .icon-box::after{
+ content:"";
+ position: absolute;
+ width:20px;
+ height:20px;
+ background-color: #fff;
+ border-bottom-right-radius: 30px;
+ bottom:0;
+ left:-20px;
+ box-shadow:  5px 5px 5px 0px #EBF4FF;
+ 
+}
+
+/* .blog-section .card::after {
+  content: "";
+  position: absolute;
+  width: 3rem;
+  height: 3rem;
+  bottom: -0.5rem;
+  right: -0.5rem;
+  background-color: #eaf4ff;
+  border-radius: 50%;
+  z-index: -1;
+} */
+
+.blog-section .image-placeholder {
+  width: 100%;
+  height: 140px;
+  background-color: #e0d3d3;
+  border-radius: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.blog-section .card h3 {
+  color: var(--secondry-index-color);
   font-family: "Quicksand", sans-serif;
   font-size: 25px;
   font-style: normal;
+  font-weight: 500;
+  line-height: 35px; 
+  margin-bottom: 0.5rem;
+  text-align: left;
+}
+
+.blog-section .date {
+  color: var(--primary-index-color);
+  font-family: "Quicksand", sans-serif;
+  font-size: 20px;
+  font-style: normal;
   font-weight: 400;
-  line-height: 31px;
-  z-index: 1;
-} 
+  line-height: 66px; /* 286.957% */
+  letter-spacing: 1.38px;
+  margin-bottom: 1rem;
+  text-align: left;
+}
+
+.blog-section .read-more {
+  text-decoration: none;
+  font-weight: 600;
+  color: #001d64;
+  display: inline-flex;
+  align-items: center;
+  gap: 0.25rem;
+  font-size: 25px;
+}
+
+@media (max-width: 768px) {
+  .blog-section h2 {
+    font-size: 32px;
+    font-style: normal;
+
+    margin-bottom: 1rem;
+  }
+
+  .blog-section .subtitle {
+    font-size: 28px;
+
+    line-height: 38px;
+
+    margin: 0 auto 3rem;
+    /* line-height: 1.6; */
+  }
+
+
+
+  .blog-section .card h3 {
+  color: var(--secondry-index-color);
+  font-size: 20px;
+  line-height: 30px; 
+  text-align: left;
+}
+
+.blog-section .date {
+  color: var(--primary-index-color);
+  font-size: 15px;
+  line-height: 50px; /* 286.957% */
+  letter-spacing: 1.38px;
+  
+}
+
+.blog-section .read-more {
+ 
+  font-weight: 600;
+  gap: 0.25rem;
+  font-size: 20px;
+}
 }
