--- a/css/contact_us.css
+++ b/css/contact_us.css
@@ -7,70 +7,293 @@
   --secondry-index-color: #009588;
   --primary-bg-color: #004487;
 }
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-body{
-    height: 100%;
+body {
+  height: 100%;
 }
-   .contact-us-containers{
-    background-color: var(--primary-bg-color);
-    min-height: 105vh;
-    height:100%;
-   }
+.contact-us-containers {
+  background-color: var(--primary-bg-color);
+  min-height: 105vh;
+}
 
-    .contact-us-containers .contact-header {
-      text-align: center;
-      margin-top: 60px;
-      margin-bottom: 20px;
-    }
+.contact-us-containers .contact-header {
+  padding-top: 12rem;
+  padding-bottom: 5rem;
+  text-align: center;
+  /* margin-top: 60px; */
+  /* margin-bottom: 20px; */
+}
 
-    .contact-us-containers .contact-header h1 {
-      font-size: 2.5rem;
-    }
+.contact-us-containers .contact-header h1 {
+  font-size: 2.5rem;
+}
 
-    .contact-us-containers .contact-header h1 span {
-      color: #00a283;
-    }
+.contact-us-containers .contact-header h1 span {
+  color: #00a283;
+}
 
-    .contact-us-containers .contact-header p {
-      max-width: 800px;
-      margin: auto;
-      font-size: 1.1rem;
-      line-height: 1.6;
-    }
+.contact-us-containers .contact-header p {
+  max-width: 800px;
+  margin: auto;
+  font-size: 1.1rem;
+  line-height: 1.6;
+}
 
-    .contact-us-containers .form-container {
-      background-color: white;
-      color: black;
-      padding: 2rem;
-      border-radius: 10px;
-      max-width: 900px;
-      margin: 40px auto;
-      box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
-    }
+.contact-us-containers .form-container {
+  background-color: white;
+  color: black;
+  padding: 2rem;
+  border-radius: 10px;
+  max-width: 900px;
+  margin: 40px auto;
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
+}
 
-    .contact-us-containers .form-control,
-    .contact-us-containers .form-select {
-      border-radius: 8px;
-    }
+.contact-us-containers .form-control,
+.contact-us-containers .form-select {
+  border-radius: 8px;
+}
 
-    .contact-us-containers .btn-primary {
-      background-color: #0050c8;
-      border: none;
-      padding: 0.5rem 2rem;
-      border-radius: 25px;
-    }
+.contact-us-containers .btn-primary {
+  background-color: #0050c8;
+  border: none;
+  padding: 0.5rem 2rem;
+  border-radius: 25px;
+}
 
-    .contact-us-containers .btn-primary:hover {
-      background-color: #003c99;
-    }
+.contact-us-containers .btn-primary:hover {
+  background-color: #003c99;
+}
 
-    @media (max-width: 576px) {
-      .contact-us-containers .contact-header h1 {
-        font-size: 2rem;
-      }
-    }
+@media (max-width: 576px) {
+  .contact-us-containers .contact-header h1 {
+    font-size: 2rem;
+  }
+}
+
+/* ------------------------------------------------- */
+/* location section */
+/* ------------------------------------------------- */
+
+.location-wrapper {
+  padding: 5rem;
+  background-color: #fff;
+}
+
+.location-wrapper .location-container {
+  border-radius: 40px;
+  border: 1px solid var(--primary-index-color);
+  padding: 2rem;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 2rem;
+  background: white;
+  /* max-width: 1000px; */
+  margin: auto;
+}
+
+.location-wrapper .contact-block {
+  flex: 1 1 250px;
+  text-align: center;
+}
+
+.location-wrapper .contact-block img {
+  width: 40px;
+  margin-bottom: 10px;
+}
+
+.location-wrapper .contact-block h3 {
+  color: var(--secondary-index-color);
+
+  text-align: center;
+  font-family: Quicksand;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 32px; /* 133.333% */
+  letter-spacing: 0.2px;
+  margin: 0.5rem 0;
+}
+
+.location-wrapper .contact-block a {
+  /* color: #003366; */
+  text-decoration: none;
+  /* font-weight: 500; */
+}
+
+.location-wrapper .contact-block p {
+  margin: 0.3rem 0;
+  color: var(--primary-index-color);
+
+  text-align: center;
+  font-family: Quicksand;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26.8px; /* 191.2% */
+  letter-spacing: 1px;
+}
+
+.location-wrapper .contact-block p strong {
+  color: #003366;
+}
+
+.location-wrapper .contact-bw {
+  background: url(/images/bg-contact.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 1rem;
+}
+
+/* Responsive */
+@media (max-width: 768px) {
+  .location-wrapper {
+    padding: 2rem;
+    background-color: #fff;
+  }
+
+  .location-wrapper .location-container {
+    flex-direction: column;
+    text-align: center;
+    border: none;
+  }
+
+  .location-wrapper .contact-block {
+    /* border-bottom: 1px solid #eaeaea; */
+    flex: 1 1 171px;
+    text-align: center;
+    padding-bottom: 1.5rem;
+  }
+
+  .location-wrapper .contact-block:last-child {
+    border-bottom: none;
+  }
+
+  .location-wrapper .contact-bw {
+    background: #fff;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding: 1rem;
+  }
+
+  .location-wrapper .location p {
+    text-align: left;
+    padding-left: 1rem;
+  }
+}
+
+/* ------------------------------------------------- */
+/* location section */
+/* ------------------------------------------------- */
+
+.image-container {
+  min-height: 80vh;
+  /* width: 100vw; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.image-container .image-wrapper {
+  padding: 12rem !important;
+  width: 100%;
+  height: 100%;
+  /* width: 100vw; */
+  /* height: 100vh; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* background: url("/images/map.png") no-repeat center center; */
+  /* object-fit: contain; */
+}
+
+.image-wrapper img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+@media (max-width: 768px) {
+  .image-container {
+    min-height: 60vh;
+  }
+
+  .image-container .image-wrapper {
+    padding: 0rem !important;
+  }
+}
+
+/* ------------------------------------------------- */
+/* faq section */
+/* ------------------------------------------------- */
+.faq-section {
+  padding: 5rem;
+}
+
+.faq-section .faq-header {
+  /* text-align: center; */
+  /* border: 2px dotted #008080; */
+  display: inline-block;
+  padding: 10px 20px;
+  margin-bottom: 2rem;
+  color: #009588;
+  font-family: "Varela Round", sans-serif;
+  font-size: 60px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 68px; /* 42.857% */
+}
+
+.faq-section .faq-box {
+  background-color: var(--primary-index-color);
+  color: white;
+  border-radius: 10px;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.faq-section .faq-box span {
+  color: #fff;
+
+  font-family: "Varela Round", sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px; /* 100% */
+}
+
+.faq-section .faq-box i {
+  color: white;
+  font-size: 0.8rem;
+}
+
+@media (max-width: 768px) {
+  .faq-section .faq-box span {
+    font-size: 0.8rem;
+  }
+
+  .faq-section .faq-box i {
+    font-size: 0.8rem;
+  }
+
+  .faq-section {
+    padding: 2rem;
+  }
+  .faq-section .faq-header {
+    font-family: "Varela Round", sans-serif;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 42px;
+  }
+}
