--- a/css/common.css
+++ b/css/common.css
@@ -94,7 +94,7 @@ header {
   color: #2c3e50;
   font-family: "Varela Round", sans-serif;
   font-weight: 400;
-  font-size: 18px;
+  font-size:26px;
   line-height: 100%;
   letter-spacing: 0%;
   font-style: normal;
@@ -109,7 +109,7 @@ header {
   font-family: "Quicksand", sans-serif;
   font-optical-sizing: auto;
   font-weight: 300;
-  font-size: 9px;
+  font-size: 13px;
   line-height: 100%;
   letter-spacing: 0%;
   word-spacing: 5px;
@@ -191,17 +191,19 @@ header {
 .dropdown-toggle[aria-expanded="true"] .custom-dropdown-icon {
   transform: rotate(180deg);
 }
-.dropdown:hover .dropdown-menu {
+.dropdown:hover .dropdown-menu, 
+.dropdown .dropdown-menu:hover ,dropdown-toggle:hover .dropdown-menu {
   display: flex;
 }
 
+
+
 .dropdown-menu {
-  /* display: flex; */
   justify-content: center !important;
   border: none;
   border-radius: 15px;
   /* box-shadow: 0 10px 30px rgba(0,0,0,0.15); */
-  margin-top: 6px;
+  /* margin-top: 6px; */
   margin-left: 10px;
   padding: 8px;
   background: fff;
@@ -609,7 +611,7 @@ header {
 /* -------------- */
 
 .footer .footer-section {
-  background: url("/images/footer_item.png") no-repeat center center/cover;
+  background: url("../images/footer_item.png") no-repeat center center/cover;
   position: relative;
   overflow: hidden;
   min-height: 100vh;
@@ -623,7 +625,7 @@ header {
   left: 0;
   right: 0;
   bottom: 0;
-  background: url("asset/footer.png") no-repeat center center/cover;
+  background: url("../images/footer.png") no-repeat center center/cover;
   /* background: 
                 radial-gradient(ellipse at 20% 80%, rgba(6, 182, 212, 0.3) 0%, transparent 50%),
                 radial-gradient(ellipse at 80% 20%, rgba(34, 197, 94, 0.2) 0%, transparent 50%),
@@ -636,7 +638,7 @@ header {
   left: 0;
   right: 0;
   bottom: 0;
-  background: url("asset/footer.png") no-repeat center center/cover;
+  background: url("/images/footer.png") no-repeat center center/cover;
   /* background: 
                 radial-gradient(ellipse 150% 100% at 50% 120%, transparent 40%, rgba(6, 95, 70, 0.1) 41%, rgba(6, 95, 70, 0.1) 58%, transparent 60%),
                 radial-gradient(ellipse 150% 100% at 80% 90%, transparent 40%, rgba(20, 184, 166, 0.15) 41%, rgba(20, 184, 166, 0.15) 58%, transparent 60%),
