--- a/css/blog.css
+++ b/css/blog.css
@@ -331,6 +331,7 @@
 .blog-section .image-placeholder {
   width: 100%;
   height: 140px;
+  overflow: hidden;
   background-color: #e0d3d3;
   border-radius: 1.5rem;
   margin-bottom: 1rem;
